# typed-tailwind

./: Cargo.toml  README.md
src/: backgrounds.rs  borders.rs  core.rs  effects.rs  flexbox.rs  interactivity.rs  layout.rs  lib.rs  sizing.rs  spacing.rs  typography.rs
typed-tailwind-derive/: Cargo.toml
typed-tailwind-derive/src/: lib.rs
typed-tailwind-seed-derive/: Cargo.toml
typed-tailwind-seed-derive/src/: lib.rs
