[package]
name = "typed-tailwind"
version = "0.1.0"
authors = ["Viktor Lazarev <taurus101v@gmail.com>"]
edition = "2018"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"typed-tailwind-derive" = { path = "./typed-tailwind-derive" }
