[package]
name = "typed-tailwind"
version = "0.2.0"
authors = ["Viktor Lazarev <taurus101v@gmail.com>"]
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-tailwind-derive = { path = "./typed-tailwind-derive" }
seed = { version = "0.9", optional = true }
typed-tailwind-seed-derive = { path = "./typed-tailwind-seed-derive", optional = true }

[features]

default = []

seed_support = [ "seed", "typed-tailwind-seed-derive" ]
